# Laplace-equation-with-Trilinos

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake
include/: Assembler.hpp  ElementKernel.hpp  HDF5_IO.hpp  LinearSolver.hpp  MeshGenerator.hpp  PartitionIO.hpp  PostProcessor.hpp  Preprocessor.hpp  ProblemData.hpp  Timing.hpp  TriangleElement.hpp  TriangleQuadrature.hpp  Types.hpp
scripts/: benchmark_single_rank_modes.sh  build.sh  build_cpu.sh  build_cuda.sh  build_openmp.sh  clean_cmake.sh  configure.sh  preprocess_mesh.sh  run_cpu.sh  run_cuda.sh  run_openmp.sh  run_single_rank_cuda.sh  run_single_rank_openmp.sh  run_single_rank_serial.sh
src/: Assembler.cpp  ElementKernel.cpp  HDF5_IO.cpp  LinearSolver.cpp  MeshGenerator.cpp  PartitionIO.cpp  PostProcessor.cpp  Preprocessor.cpp  ProblemData.cpp  TriangleElement.cpp  TriangleQuadrature.cpp  main.cpp  preprocess_main.cpp
test/cpu_test/: nx=1024_ny=1024_np=1.txt  nx=128_ny=128_np=2.txt  nx=256_ny=256_np=1.txt  nx=256_ny=256_np=7.txt
test/cpu_test/JACOBI/: benchmark_mesh_timings.sh  cpu_benchmark_summary.txt  nx=1024_ny=1024_np=1.txt  nx=1024_ny=1024_np=105.txt  nx=128_ny=128_np=1.txt  nx=128_ny=128_np=2.txt  nx=256_ny=256_np=1.txt  nx=256_ny=256_np=7.txt  nx=512_ny=512_np=1.txt  nx=512_ny=512_np=26.txt
test/cpu_test/SGS/: benchmark_mesh_timings.sh  cpu_benchmark_summary.txt  nx=1024_ny=1024_np=105.txt  nx=128_ny=128_np=1.txt  nx=512_ny=512_np=1.txt  nx=512_ny=512_np=26.txt
test/cuda_test/: benchmark_cuda_np1_scale.sh  cuda_solver_assembly_notes.txt
test/cuda_test/np1_scale_test/: cuda_np1_scale_summary.txt  nx=1024_ny=1024_np=1.txt  nx=256_ny=256_np=1.txt  nx=512_ny=512_np=1.txt
test/cuda_test/np_test/: benchmark_cuda_mesh_timings.sh  cuda_benchmark_summary.txt  nx=128_ny=128_np=1.txt  nx=128_ny=128_np=2.txt
test/openmp_test/: benchmark_threads_256_np7.sh  nx=256_ny=256_np=7_threads=14.txt  nx=256_ny=256_np=7_threads=15.txt  nx=256_ny=256_np=7_threads=19.txt  nx=256_ny=256_np=7_threads=3.txt  nx=256_ny=256_np=7_threads=8.txt
test/openmp_test/JACOBI/: benchmark_threads_256_np7.sh  nx=256_ny=256_np=7_threads=1.txt  nx=256_ny=256_np=7_threads=10.txt  nx=256_ny=256_np=7_threads=11.txt  nx=256_ny=256_np=7_threads=12.txt  nx=256_ny=256_np=7_threads=13.txt  nx=256_ny=256_np=7_threads=14.txt  nx=256_ny=256_np=7_threads=15.txt  nx=256_ny=256_np=7_threads=16.txt  nx=256_ny=256_np=7_threads=17.txt  nx=256_ny=256_np=7_threads=18.txt  nx=256_ny=256_np=7_threads=19.txt  nx=256_ny=256_np=7_threads=2.txt  nx=256_ny=256_np=7_threads=20.txt  nx=256_ny=256_np=7_threads=3.txt  nx=256_ny=256_np=7_threads=4.txt  nx=256_ny=256_np=7_threads=5.txt  nx=256_ny=256_np=7_threads=6.txt  nx=256_ny=256_np=7_threads=7.txt  nx=256_ny=256_np=7_threads=8.txt  nx=256_ny=256_np=7_threads=9.txt  nx=256_ny=256_np=7_threads_1_20_summary.txt
test/openmp_test/SGS/: nx=256_ny=256_np=7_threads=1.txt  nx=256_ny=256_np=7_threads=10.txt  nx=256_ny=256_np=7_threads=11.txt  nx=256_ny=256_np=7_threads=12.txt  nx=256_ny=256_np=7_threads=13.txt  nx=256_ny=256_np=7_threads=16.txt  nx=256_ny=256_np=7_threads=17.txt  nx=256_ny=256_np=7_threads=18.txt  nx=256_ny=256_np=7_threads=2.txt  nx=256_ny=256_np=7_threads=20.txt  nx=256_ny=256_np=7_threads=4.txt  nx=256_ny=256_np=7_threads=5.txt  nx=256_ny=256_np=7_threads=6.txt  nx=256_ny=256_np=7_threads=7.txt  nx=256_ny=256_np=7_threads=9.txt  nx=256_ny=256_np=7_threads_1_20_summary.txt
test/openmp_test/binding_test/: benchmark_binding_256_np7_threads4.sh  nx=256_ny=256_np=7_threads=4_binding=close_cores.txt  nx=256_ny=256_np=7_threads=4_binding=close_threads.txt  nx=256_ny=256_np=7_threads=4_binding=false_cores.txt  nx=256_ny=256_np=7_threads=4_binding=false_threads.txt  nx=256_ny=256_np=7_threads=4_binding=spread_cores.txt  nx=256_ny=256_np=7_threads=4_binding=spread_threads.txt  nx=256_ny=256_np=7_threads=4_binding_summary.txt
